--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
+    <h1> JS Practice By Talha Bin Haneef</h1>
 
     <input type="button" onclick="location.href='/change_fontsize.html'" value="Changing FontSize" />
     
