--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <body>
     <h1> JS Practice By Talha Bin Haneef</h1>
 
-    <input type="button" onclick="location.href='/change_fontsize.html'" value="Changing FontSize" />
+    <input type="button" onclick="location.href='change_fontsize.html'" value="Changing FontSize" />
     
-    <input type="button" onclick="location.href='/hideshow.html'" value="HIDE / SHOW" />
+    <input type="button" onclick="location.href='hideshow.html'" value="HIDE / SHOW" />
 
-    <input type="button" onclick="location.href='/fuction.html'" value="JS Functon In Head" />
+    <input type="button" onclick="location.href='fuction.html'" value="JS Functon In Head" />
 
-    <input type="button" onclick="location.href='/alert.html'" value="Alert" />
+    <input type="button" onclick="location.href='alert.html'" value="Alert" />
 
-    <input type="button" onclick="location.href='/print.html'" value="Print" />
+    <input type="button" onclick="location.href='print.html'" value="Print" />
 
-    <input type="button" onclick="location.href='/blocks.html'" value="Blocks" />
+    <input type="button" onclick="location.href='blocks.html'" value="Blocks" />
 
-    <input type="button" onclick="location.href='/getelement.html'" value="Get Elements" />
+    <input type="button" onclick="location.href='getelement.html'" value="Get Elements" />
 
     
 
