--- a/blocks.html
+++ b/blocks.html
@@ -19,7 +19,8 @@ function myFunction1() {
 }
 
 function myFunction2() {
-  document.getElementById("demo1").innerHTML = "Lines in myFunction2";
+  document.getElementById("demo1").innerHTML = "Juniad"
+   console.log (document.getElementById("demo1").innerHTML);
   document.getElementById("demo2").innerHTML = "SUCCESSFUL!";
 }
 
