--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
     <input type="button" onclick="location.href='getelement.html'" value="Get Elements" />
 
+    <input type="button" onclick="location.href='convert.html'" value="F to C" />
+
     
 
 </body>
