--- a/getelement.html
+++ b/getelement.html
@@ -5,7 +5,7 @@
 <h2>JavaScript Expressions</h2>
 
 <p>Enter Name to Welcome him.</p>
-<input type="text" id="name" placeholder="Ente Your Name:">
+<input type="text" id="name" placeholder="Enter Your Name:">
 <button onclick="welcome()">Enter</button>
 
 <p id="demo"></p>
