--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
     <input type="button" onclick="location.href='convert.html'" value="F to C" />
 
-    
+
+    <input type="button" onclick="location.href='Arrays.html'" value="Arrays" />
+   
 
 </body>
 </html> 
