--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <input type="button" onclick="location.href='convert.html'" value="F to C" />
 
 
-    <input type="button" onclick="location.href='Arrays.html'" value="Arrays" />
+    <input type="button" onclick="location.href='arrays.html'" value="Arrays" />
    
 
 </body>
