--- a/fuction.html
+++ b/fuction.html
@@ -5,6 +5,14 @@
 function myFunction() {
   document.getElementById("para").innerHTML = "Paragraph changed.";
 }
+a=9
+b=7
+console.log(a-b);
+console.log(a+b);
+console.log(a*b);
+console.log((a/b).toFixed(2));
+console.log(a%b);
+
 </script>
 </head>
 <body>
