--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
 
 
     <input type="button" onclick="location.href='arrays.html'" value="Arrays" />
+
+    <input type="button" onclick="location.href='switch.html'" value="Switch" />
+
+    <input type="button" onclick="location.href='callback_function.html'" value="Call Back Function" />
+   
+
+    <input type="button" onclick="location.href='alerts_using_or.html'" value="Alerts Using OR" />
+   
+
+    <input type="button" onclick="location.href='Multiply_Divide.html'" value="Divide / Multiple" />
+   
    
 
 </body>
