--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <input type="button" onclick="location.href='alerts_using_or.html'" value="Alerts Using OR" />
    
 
-    <input type="button" onclick="location.href='Multiply_Divide.html'" value="Divide / Multiple" />
+    <input type="button" onclick="location.href='multiply_divide.html'" value="Divide / Multiple" />
    
    
 
