--- a/alerts_using_or.html
+++ b/alerts_using_or.html
@@ -3,4 +3,7 @@
 "use strict";
 
 alert( alert("First Condition") || alert("Second Condition") || alert("Third Condition") || alert("Forth Condition") );
+
 </script>
+
+<input type="button" onclick="location.href='index.html'" value=" Home " />
