--- a/arrays.html
+++ b/arrays.html
@@ -11,7 +11,7 @@
 <body>
 
 
- 
+    <input type="button" onclick="location.href='index.html'" value=" Home " />
 
     <!--  Join Array Elements by * -->
 
