--- a/blocks.html
+++ b/blocks.html
@@ -5,6 +5,7 @@
 <h2>JavaScript Statements</h2>
 
 <p>JavaScript code blocks are written between { and }</p>
+<input type="button" onclick="location.href='index.html'" value=" Home " />
 
 <button type="button" onclick="myFunction1()">Call myFunction1</button>
 <button type="button" onclick="myFunction2()">Call myFunction2</button>
