--- a/callback_function.html
+++ b/callback_function.html
@@ -16,5 +16,6 @@ let welcome = (age < 18) ?
 
 welcome();
     </script>
+      <input type="button" onclick="location.href='index.html'" value=" Home " />
 </body>
 </html>
