--- a/convert.html
+++ b/convert.html
@@ -21,6 +21,7 @@
                     <p>Enter Temprature(F):</p>
                     <input class="bg-secondary rounded  " type="text" id="temp" placeholder="Enter Temprature:">
                     <button class="bg-primary rounded" onclick="welcome()">Enter</button>
+                    <input type="button" onclick="location.href='index.html'" value=" Home " />
 
                     <p id="demo"></p>
                 </div>
