--- a/fuction.html
+++ b/fuction.html
@@ -22,6 +22,7 @@ console.log(a%b);
 <p id="para">A Paragraph.</p>
 
 <button type="button" onclick="myFunction()">Try it</button>
+<input type="button" onclick="location.href='index.html'" value=" Home " />
 
 </body>
 </html> 
