--- a/getelement.html
+++ b/getelement.html
@@ -19,5 +19,6 @@ document.getElementById("demo").innerHTML = "Well Come! Dear " + name  + ", Hope
 
 </script>
 
+<input type="button" onclick="location.href='index.html'" value=" Home " />
 </body>
 </html>
