--- a/hideshow.html
+++ b/hideshow.html
@@ -17,6 +17,6 @@
 <p id="demo" style="display:none">This Element was Hided Before Clicking Button</p>
 <br>
 <button type="button" onclick="document.getElementById('demo').style.display='block'">Click This Button to show Hided Element.</button>
-
+<input type="button" onclick="location.href='index.html'" value=" Home " />
 </body>
 </html> 
