--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <body>
     <h1> JS Practice By Talha Bin Haneef</h1>
 
+
+  
+
     <input type="button" onclick="location.href='change_fontsize.html'" value="Changing FontSize" />
     
     <input type="button" onclick="location.href='hideshow.html'" value="HIDE / SHOW" />
@@ -31,6 +34,10 @@
    
 
     <input type="button" onclick="location.href='multiply_divide.html'" value="Divide / Multiple" />
+
+
+    <input type="button" onclick="location.href='interaction.html'" value=" Interactions" />
+
    
    
 
