--- a/alert.html
+++ b/alert.html
@@ -8,6 +8,7 @@
 <script>
 window.alert(  50 + 6 );
 </script>
+<input type="button" onclick="location.href='index.html'" value=" Home " />
 
 </body>
 </html> 
