--- a/multiply_divide.html
+++ b/multiply_divide.html
@@ -48,7 +48,7 @@
             </div>
         </div>
     </div>
-
+    <input type="button" onclick="location.href='index.html'" value=" Home " />
 
 </body>
 
