--- a/print.html
+++ b/print.html
@@ -7,6 +7,7 @@
 <p>Click the button to print the current page.</p>
 
 <button onclick="window.print()">Print this page</button>
+<input type="button" onclick="location.href='index.html'" value=" Home " />
 
 </body>
 </html>
