--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 
     <input type="button" onclick="location.href='interaction.html'" value=" Interactions" />
 
+
+    <input type="button" onclick="location.href='countvowel.html'" value=" Volwels Count" />
+
+    <input type="button" onclick="location.href='longwordstring.html'" value=" Long Word in String" />
+
    
    
 
