--- a/hideshow.html
+++ b/hideshow.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    </head>
 <body>
 
 
-<p id="txttalha">TALHA</p>
+
 <br>
 
 <button type="button" onclick="document.getElementById('txttalha').style.display='none'">HIDE</button>
@@ -12,11 +17,48 @@
 
 
 <br>
-
+<p id="txttalha" style="display:none;">TALHA</p>
 
 <p id="demo" style="display:none">This Element was Hided Before Clicking Button</p>
-<br>
+
 <button type="button" onclick="document.getElementById('demo').style.display='block'">Click This Button to show Hided Element.</button>
 <input type="button" onclick="location.href='index.html'" value=" Home " />
+
+
+
+<div class="card">
+    <div class="card-body">
+        <div class="card-title">
+
+        </div>
+        <div class="">
+        <button type="button" onclick="document.getElementById('q1').style.display='block'">Q#1</button>
+        <p id="q1" style="display:none;">A#1 <span onclick="document.getElementById('q1').style.display='none'" >V</span></p>
+        <br>
+        <button type="button" onclick="document.getElementById('q2').style.display='block'">Q#2</button>
+        <p id="q2" style="display:none;">A#2</p>
+        <br>
+        <button type="button" onclick="document.getElementById('q3').style.display='block'">Q#3</button>
+        <p id="q3" style="display:none;">A#3</p>
+        <br>
+        <button type="button" onclick="document.getElementById('q4').style.display='block'">Q#4</button>
+        <p id="q4" style="display:none;">A#4</p>
+        <br>
+        <button type="button" onclick="document.getElementById('q5').style.display='block'">Q#5</button>
+        <p id="q5" style="display:none;">A#5</p>
+        <br>
+        <button type="button" onclick="document.getElementById('q6').style.display='block'">Q#6</button>
+        <p id="q6" style="display:none;">A#6</p>
+        <br>
+
+    </div>
+    </div>
+</div>
+
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+ 
 </body>
 </html> 
