--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
                             <input class="btn btn-primary mt-4" type="button" onclick="location.href='longwordstring.html'"
                                 value=" Long Word in String" />
 
+                                <input class="btn btn-primary mt-4" type="button" onclick="location.href='objects.html'"
+                                value=" Objects" />
+                                <input class="btn btn-primary mt-4" type="button" onclick="location.href='Tasbeeh.html'"
+                                value=" Tasbeeh" />
+
 
 
 
