--- a/Tasbeeh.html
+++ b/Tasbeeh.html
@@ -57,9 +57,9 @@
                     <div class="card-body text-center text-white">
 
                         <h1 id="num" style="font-family:'digital-clock-font'; font-size: 100px;">0</h1>
-                        <img onclick="incrementOrDecrement('inc')" src="/assets/allah.jpg" alt=""
+                        <img onclick="incrementOrDecrement('inc')" src="assets/allah.jpg" alt=""
                             style="height: 100px; width: 100px; border-radius: 50%;">
-                        <img onclick="incrementOrDecrement('dec')" src="/assets/reset.png" alt="" style="height: 40px; width: 40px;">
+                        <img onclick="incrementOrDecrement('dec')" src="assets/reset.png" alt="" style="height: 40px; width: 40px;">
 
                     </div>
                 </div>
