--- a/Tasbeeh.html
+++ b/Tasbeeh.html
@@ -15,7 +15,7 @@
     <style>
         @font-face {
             font-family: 'digital-clock-font';
-            src: url('/fonts/calculator.ttf');
+            src: url('fonts/calculator.ttf');
         }
     </style>
 
