--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
                                 <input class="btn btn-primary mt-4" type="button" onclick="location.href='Tasbeeh.html'"
                                 value=" Tasbeeh" />
 
+                                <input class="btn btn-primary mt-4" type="button" onclick="location.href='Tasbeeh.html'"
+                                value=" MY Deployement " />
+
 
 
 
